# long-day-simulator

./: .gitignore  Cargo.toml  README.md  long_day_sim.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: main.rs
src/long_day_simulator/: long_day_sim.py  main.py
