[package]
name = "long_day_simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
chrono = { version = "=0.4.31", features = ["clock"], default-features = false }
icalendar = "=0.15.6"
uuid = { version = "=1.6.1", features = ["v4"] }
getrandom = { version = "=0.2.15" }
