[package]
name = "long_day_simulator"
description = "Generate ICS Calendar: What if days were 25h instead of 24? You'd get an extra hour each day, just by shifting your bedtime an hour later each night."
version = "0.1.1"
edition = "2024"
license = "Unlicense"
repository = "https://github.com/DeflateAwning/long-day-simulator"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
chrono = { version = "=0.4.31", features = ["clock"], default-features = false }
icalendar = "=0.15.6"
uuid = { version = "=1.6.1", features = ["v4"] }
getrandom = { version = "=0.2.15" }
