[project]
name = "long-day-simulator"
version = "0.1.0"
description = "What if days were 25h instead of 24? You'd get an extra hour each day, just by shifting your bedtime an hour later each night."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ics>=0.7.2"
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "ruff>=0.15.9",
]

[project.scripts]
long_day_sim = "long_day_simulator.main:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.0.0"]


[tool.hatch.build.targets.wheel]
packages = ["src/long_day_simulator"]

[tool.basedpyright]
typeCheckingMode = "strict"
